cross navigation all senarios

--- a/app/launchpage.html
+++ b/app/launchpage.html
@@ -19,7 +19,7 @@
         applications: {
           "fiorielements-display": {
             title: "fiorielements",
-            description: "Cups Manager",
+            description: "Cup Manager",
             additionalInformation: "SAPUI5.Component=fiorielements",
             applicationType: "URL",
             url: "./fiorielements/webapp",
@@ -27,7 +27,7 @@
           },
           "ui5freestyle-display": {
             title: "ui5freestyle",
-            description: "Liquid Manager",
+            description: "Cup Manager",
             additionalInformation: "SAPUI5.Component=ui5freestyle",
             applicationType: "URL",
             url: "./ui5freestyle/webapp",
@@ -39,6 +39,14 @@
             additionalInformation: "SAPUI5.Component=fiorielementsnavto",
             applicationType: "URL",
             url: "./fiorielementsnavto/webapp",
+            navigationMode: "embedded",
+          },
+          "ui5freestylenavto-display": {
+            title: "ui5 freestyle nav to",
+            description: "Liquid Manager",
+            additionalInformation: "SAPUI5.Component=ui5freestylenavto",
+            applicationType: "URL",
+            url: "./ui5freestylenavto/webapp",
             navigationMode: "embedded",
           },
         },
